lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
  namespace: default
spec:
  tls:
  - hosts:
      - lab3.example.com
    secretName: secret-tls
  rules:
  - host: lab3.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: itcd-svc
            port:
              number: 443
